<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:background="@color/color_verde"
        android:onClick="EntrarProducto"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/linearLayout15"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            app:srcCompat="@drawable/cesta_picnic" />

        <TextView
            android:id="@+id/txt_producto_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_producto"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:background="@color/color_verde"
        android:onClick="MiLista"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            app:srcCompat="@drawable/lista" />

        <TextView
            android:id="@+id/txt_lista_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/menu_lista"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@color/color_verde"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="EntrarConfiguracion"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/linearLayout17"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            app:srcCompat="@drawable/configuracion_dentada" />

        <TextView
            android:id="@+id/txt_configurar_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_configuracion"
            android:textAlignment="gravity"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/color_verde"
        android:orientation="vertical"
        android:onClick="Salir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            app:srcCompat="@drawable/flecha" />

        <TextView
            android:id="@+id/txt_menu_salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_salir"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/color_verde"
        android:orientation="vertical"
        android:onClick="EntrarProveedor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            app:srcCompat="@drawable/roadshow" />

        <TextView
            android:id="@+id/txt__provedor_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_proveedor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@color/color_verde"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        android:onClick="EntrarCategoria"
        app:layout_constraintStart_toEndOf="@+id/linearLayout16"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            app:srcCompat="@drawable/tienda" />

        <TextView
            android:id="@+id/txt_categoria_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_categodria"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>