<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarConfiguracionActivity">

    <LinearLayout
        android:id="@+id/linearLayout_configuracion"
        android:layout_width="415dp"
        android:layout_height="73dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/color_verde"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/liner_configuracion_regresar"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:background="@color/color_verde"
            android:onClick="AtrasConfiguracioEditar"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_regresar_editar"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/volver" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_nombre_configuracion5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:text="@string/nombre_perfil_configuracion_editar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_perfil_editar" />

    <EditText
        android:id="@+id/txt_usuario_configuracion_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/nombre_usuario_configuracion_editar"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_configuracion5" />

    <EditText
        android:id="@+id/txt_correro_configuracion_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/correro_confihuracion_editar"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario_configuracion_editar" />

    <ImageView
        android:id="@+id/imageView_perfil_editar"
        android:layout_width="139dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_configuracion"
        app:srcCompat="@drawable/usuario" />

    <Button
        android:id="@+id/button_editar_configuracion_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/color_boton"
        android:text="@string/botton_editar_iformacion_configuracion_editar"
        android:onClick="AtrasEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correro_configuracion_editar" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="85dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="1dp"
        android:background="@color/teal_700"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editar_configuracion_editar"></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>