<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfiguracionActivity">

    <TextView
        android:id="@+id/txt_nombre_configuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/nombre_perfil_configuracion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_perfil" />

    <EditText
        android:id="@+id/txt_usuario_configuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/nombre_usuario_configuracion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_configuracion" />

    <EditText
        android:id="@+id/txt_correro_configuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/correro_confihuracion"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario_configuracion" />

    <LinearLayout
        android:id="@+id/linearLayout_configuracion"
        android:layout_width="419dp"
        android:layout_height="83dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_verde"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/liner_configuracion_regresar"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:background="@color/color_verde"
            android:onClick="VolverMenuConfiguracion"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_regresar_editar"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:paddingLeft="25dp"
                app:srcCompat="@drawable/volver" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_perfil"
        android:layout_width="139dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout_configuracion"
        app:srcCompat="@drawable/usuario" />

    <Button
        android:id="@+id/button_editar_configuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/color_boton"
        android:onClick="IrMenuConfiguracionEditar"
        android:text="@string/botton_editar_iformacion_configuracion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correro_configuracion"
        app:layout_constraintVertical_bias="0.082" />

    <LinearLayout
        android:layout_width="488dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="1dp"
        android:background="@color/teal_700"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editar_configuracion"></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>